# GazeRest

./: README.md  README_en.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
release/v1.0.0/: GazeRest_1.0.0_x64_en-US.msi
src/: App.module.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  platform.rs  scheduler.rs  state.rs  windows.rs
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/modules/: bridge.ts  format.test.ts  format.ts  mockBridge.ts  sound.ts  viewingDistance.test.ts  viewingDistance.ts  window.ts
src/types/: app.ts
src/ui/: icons.tsx
src/ui/components/: MetricCard.module.css  MetricCard.tsx  StatusPill.module.css  StatusPill.test.tsx  StatusPill.tsx
src/ui/windows/: MainScreens.module.css  MainScreens.tsx  MainWindow.module.css  MainWindow.tsx  Overlays.module.css  Overlays.tsx  SettingsScreen.module.css  SettingsScreen.tsx
