[package]
name = "app"
version = "1.0.0"
description = "A lightweight offline 20-20-20 eye rest reminder built with Tauri."
authors = ["qq869588315"]
repository = "https://github.com/qq869588315/GazeRest"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
active-win-pos-rs = "0.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
system-idle-time = "1.0.4"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri = { version = "2.10.3", features = ["tray-icon"] }
thiserror = "2.0.17"
